# TOSS

TOSS2025-lab01-2306-王贝迪-20232241399/20232241399/lab01/: lab01.md
TOSS2025-lab02-2306-王贝迪-20232241399/20232241399/lab02/: lab02.md
TOSS2025-lab02-2306-王贝迪-20232241399/demo_code/: Cargo.toml
TOSS2025-lab02-2306-王贝迪-20232241399/demo_code/src/: main.rs
TOSS2025-lab03-2306-王贝迪-20232241399/20232241399/lab03/: lab03.md
TOSS2025-lab03-2306-王贝迪-20232241399/20232241399/lab03/codeDemo/: Cargo.toml
TOSS2025-lab03-2306-王贝迪-20232241399/20232241399/lab03/codeDemo/src/: main.rs
TOSS2025-lab04-2306-王贝迪-20232241399/20232241399/lab04/: lab04.md
TOSS2025-lab04-2306-王贝迪-20232241399/chatbot/: Cargo.toml  build.rs
TOSS2025-lab04-2306-王贝迪-20232241399/chatbot/src/: cli.rs  database.rs  embeddings.rs  llm.rs  main.rs
TOSS2025-lab05-2306-王贝迪-20232241399/20232241399/lab05/: lab05.md
TOSS2025-lab05-2306-王贝迪-20232241399/20232241399/单线程Demo/: 404.html  Cargo.toml  hello.html
TOSS2025-lab05-2306-王贝迪-20232241399/20232241399/单线程Demo/src/: main.rs
TOSS2025-lab05-2306-王贝迪-20232241399/20232241399/多线程Demo/: Cargo.toml
TOSS2025-lab05-2306-王贝迪-20232241399/20232241399/多线程Demo/src/: main.rs
